# files

./: .env  Cargo.toml  README.md  config.json
public/: styles.css
src/: main.rs  types.rs  utils.rs
src/routes/: files.rs  folders.rs  mod.rs
src/routes/api/: files.rs  mod.rs
src/types/: error.rs  mod.rs
templates/: created_file_thumbnail.tera  file.tera  folder.tera  home.tera  layout.tera  macros.tera
templates/api/files/: view.tera
templates/folders/: view.tera
