[package]
name = "files"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5" }
axum-extra = { version = "0.9.3", features = ["form"] }
bincode = "1.3.3"
dotenvy = "0.15.7"
image = "0.25.1"
md-5 = "0.10.6"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
surrealdb = { version = "1.4.2", features = ["kv-rocksdb"] }
tera = "1.19.1"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tokio-util = "0.7.10"
tower-http = { version = "0.5.2", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
webp = "0.3.0"
